Corrected translation of Andhavana in MA 9.

--- a/01_agama/madhyama/MA_009.md
+++ b/01_agama/madhyama/MA_009.md
@@ -6,6 +6,7 @@ base: ../../../
 previous: MA_008.html
 next: MA_010.html
 ---
+
 # [The Medium Discourses](index.html)
 ## Chapter 1: Sevens
 ### 9. Seven Chariots
@@ -13,56 +14,56 @@ next: MA_010.html
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the city Rājagṛha and stayed at Veḷuvana monastery.[\[2\]](#n2){: #ref2}
 {:#p1}
 
-#### The Native Land Monks Praise Pūrṇa
+#### The Homeland Monks Praise Pūrṇa
 
-2\. He was [430a] accompanied by a large assembly of monks who had spent the summer retreat there. Venerable Pūrṇa Maitrāyaniputra had spent his summer retreat in the [Buddha’s] native land.[\[3\]](#n3){: #ref3}
+2\. He was accompanied by a large assembly of monks who had spent the summer retreat there. Venerable Pūrṇa Maitrāyaniputra had spent his summer retreat in the [Buddha’s] homeland.[\[3\]](#n3){: #ref3}
 {:#p2}
 
-3\. It was then that some native land monks had finished their summer retreat after three months had passed. When they had finished mending robes, they gathered up their robes and bowls and left the native land and headed for Rājagṛha. They took a circuitous route to Rājagṛha and stayed at the Veḷuvana monastery. Those native land monks then went to the Bhagavān, paid homage by prostrating themselves, and withdrew to sit at one side.
+3\. It was then that some homeland monks had finished their summer retreat after three months had passed. When they had finished mending robes, they gathered up their robes and bowls, left the homeland, and headed for Rājagṛha. They took a circuitous route to Rājagṛha and stayed at the Veḷuvana monastery. Those homeland monks then went to the Bhagavān, paid homage by prostrating themselves, and withdrew to sit at one side.
 {:#p3}
 
 4\. The Bhagavān asked them, “Monks, where have you come from? Where was your summer retreat?”
 {:#p4}
 
-The native land monks replied, “Bhagavān, we’ve come from the native land. We spent the summer retreat in the native land.”
+The homeland monks replied, “Bhagavān, we’ve come from the homeland. We spent the summer retreat in the homeland.”
 
-5\. The Bhagavān asked them, “Among those monks of the native land, which monk is praised by the others as having few desires and being satisfied and who praises having few desires and being satisfied? Who himself lives quietly and praises quiet living? Who himself makes effort and praises making effort? Who himself is rightly mindful and praises right mindfulness? Who himself is unified in mind and praises being unified in mind? Who himself is wise and praises wisdom? Who himself has ended the contaminants and praises ending the contaminants? Who encourages, rouses, and makes [others] rejoice and praises encouraging, rousing, and making [others] rejoice?”
+5\. The Bhagavān asked them, “Among those monks of the homeland, which monk is praised by the others as having few desires and being satisfied and who praises having few desires and being satisfied? Who himself lives quietly and praises quiet living? Who himself makes effort and praises making effort? Who himself is rightly mindful and praises right mindfulness? Who himself is unified in mind and praises being unified in mind? Who himself is wise and praises wisdom? Who himself has ended the contaminants and praises ending the contaminants? Who encourages, rouses, and makes others rejoice and praises encouraging, rousing, and making others rejoice?”
 {:#p5}
 
-The native land monks said, “Bhagavān, the Venerable Pūrṇa Maitrāyaniputra is the monk in the native land who is praised by the other monks as having few desires and being satisfied and who praises having few desires and being satisfied. He himself lives quietly and praises quiet living. He himself makes effort and praises making effort. He himself is rightly mindful and praises right mindfulness. He himself is unified in mind and praises being unified in mind. He himself is wise and praises wisdom. He himself has ended the contaminants and praises ending the contaminants. He encourages, rouses, and makes [others] rejoice and praises encouraging, rousing, and making [others] rejoice.”
+The homeland monks said, “Bhagavān, Venerable Pūrṇa Maitrāyaniputra is the monk in the homeland who is praised by the other monks as having few desires and being satisfied and who praises having few desires and being satisfied. He himself lives quietly and praises quiet living. He himself makes effort and praises making effort. He himself is rightly mindful and praises right mindfulness. He himself is unified in mind and praises being unified in mind. He himself is wise and praises wisdom. He himself has ended the contaminants and praises ending the contaminants. He encourages, rouses, and makes others rejoice and praises encouraging, rousing, and making others rejoice.”
 
-6\. Venerable Śāriputra was sitting in the assembly at the time, and he had this thought, “The Bhagavān asked this group of native land monks about this matter, and the native land monks gave their greatest praise to the good man Pūrṇa Maitrāyaniputra as having few desires and being satisfied and who praises having few desires and being satisfied. He himself lives quietly and praises quiet living. He himself makes effort and praises making effort. He himself is rightly mindful and praises right mindfulness. He himself is unified in mind and praises being unified in mind. He himself is wise and praises wisdom. He himself has ended the contaminants and praises ending the contaminants. He encourages, rouses, and makes [others] rejoice and praises encouraging, rousing, and making [others] rejoice.”
+6\. Venerable Śāriputra was sitting in the assembly at the time, and he had this thought, “The Bhagavān asked this group of homeland monks about this matter, and the homeland monks gave their greatest praise to the good man Pūrṇa Maitrāyaniputra as having few desires and being satisfied and who praises having few desires and being satisfied. He himself lives quietly and praises quiet living. He himself makes effort and praises making effort. He himself is rightly mindful and praises right mindfulness. He himself is unified in mind and praises being unified in mind. He himself is wise and praises wisdom. He himself has ended the contaminants and praises ending the contaminants. He encourages, rouses, and makes others rejoice and praises encouraging, rousing, and making others rejoice.”
 {:#p6}
 
-7\. Venerable Śāriputra then had another thought, “When will I be in the same congregation as that good man Pūrṇa Maitrāyaniputra? Maybe he’ll ask about a little doctrine, or he might agree to listen to my questions.”
+7\. Venerable Śāriputra then had another thought, “When will I be in the same congregation as that good man Pūrṇa Maitrāyaniputra? Maybe he’d ask about a little doctrine, or perhaps he’d agree to listen to my questions.”
 {:#p7}
 
 #### Śāriputra Meets Pūrṇa
 
-8\. The Bhagavān finished [430b] the summer retreat in Rājagṛha after three months had passed. After they had finished mending robes, he gathered his robe and bowl and left Rājagṛha headed for the country of Śrāvastī. He took a circuitous route to Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
+8\. The Bhagavān finished the summer retreat in Rājagṛha after three months had passed. After they had finished mending robes, he gathered his robe and bowl and left Rājagṛha headed for the country of Śrāvastī. He took a circuitous route to Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
 {:#p8}
 
-9\. Venerable Śāriputra and the native land monks stayed in Rājagṛha for a few more days, then they gathered their robes and bowls and headed for Śrāvastī. They took a circuitous route to Śrāvastī and stayed together at Anāthapiṇḍada’s Park in Jeta’s Grove.
+9\. Venerable Śāriputra and the homeland monks stayed in Rājagṛha for a few more days, then they gathered their robes and bowls and headed for Śrāvastī. They took a circuitous route to Śrāvastī and stayed together at Anāthapiṇḍada’s Park in Jeta’s Grove.
 {:#p9}
 
-10\. Venerable Pūrṇa Maitrāyaniputra finished his summer retreat in the native land after three months had passed. After they had finished mending robes, he gathered his robe and bowl, and left the native land headed for Śrāvastī. He took a circuitous route to Śrāvastī and also stayed at Anāthapiṇḍada’s Park in Jeta’s Grove. Venerable Pūrṇa Maitrāyaniputra went to the Bhagavān, paid homage by prostrating himself, spread out his sitting mat, and sat down cross-legged.
+10\. Venerable Pūrṇa Maitrāyaniputra finished his summer retreat in the homeland after three months had passed. After they had finished mending robes, he gathered his robe and bowl, and left the homeland headed for Śrāvastī. He took a circuitous route to Śrāvastī and also stayed at Anāthapiṇḍada’s Park in Jeta’s Grove. Venerable Pūrṇa Maitrāyaniputra went to the Bhagavān, paid homage by prostrating himself, spread out his sitting mat, and sat down cross-legged.
 {:#p10}
 
 11\. Venerable Śāriputra then asked the other monks, “Good men, is that the good man Pūrṇa Maitrāyaniputra?”
 {:#p11}
 
-The monks told Venerable Śāriputra, “Yes, the venerable is sitting there in front of the Tathāgata. The fair-skinned one with a protruding nose like a parrot’s beak, that’s him.”
+The monks told Venerable Śāriputra, “Yes, the Venerable is sitting there in front of the Tathāgata. The fair-skinned one with a protruding nose like a parrot’s beak, that’s him.”
 
 12\. Venerable Śāriputra then knew Pūrṇa Maitrāyaniputra’s appearance and remembered it well.
 {:#p12}
 
-13\. After the night passed, Venerable Pūrṇa Maitrāyaniputra gathered his robe and bowl at sunrise and went into Śrāvastī to solicit alms. After he finished his meal, he returned, put away his robe and bowl, and washed his hands and feet. Putting his sitting mat over his shoulder, he went to the charnel ground to find a place to practice.
+13\. After the night passed, Venerable Pūrṇa Maitrāyaniputra gathered his robe and bowl at sunrise and went into Śrāvastī to solicit alms. After he finished his meal, he returned, put away his robe and bowl, and washed his hands and feet. Putting his sitting mat over his shoulder, he went to the Dark Forest[\[4\]](#n4){: #ref4} to find a place to practice.
 {:#p13}
 
-14\. After the night passed, Venerable Śāriputra also gathered his robe and bowl at sunrise and entered Śrāvastī to solicit alms. After he finished his meal, he returned, put away his robe and bowl, and washed his hands and feet. Putting his sitting mat over his shoulder, he went to the charnel ground to find a place to practice.
+14\. After the night passed, Venerable Śāriputra also gathered his robe and bowl at sunrise and entered Śrāvastī to solicit alms. After he finished his meal, he returned, put away his robe and bowl, and washed his hands and feet. Putting his sitting mat over his shoulder, he went to Dark Forest to find a place to practice.
 {:#p14}
 
-15\. Upon arriving at the charnel ground, Venerable Pūrṇa Maitrāyaniputra spread his sitting mat under a tree and sat down cross-legged. Venerable Śāriputra also reached the charnel ground, spread his sitting mat under a tree not far from Venerable Pūrṇa Maitrāyaniputra, and sat down cross-legged.
+15\. Upon arriving at the Dark Forest, Venerable Pūrṇa Maitrāyaniputra spread his sitting mat under a tree and sat down cross-legged. Venerable Śāriputra also reached the Dark Forest, spread his sitting mat under a tree not far from Venerable Pūrṇa Maitrāyaniputra, and sat down cross-legged.
 {:#p15}
 
 16\. In the afternoon, Venerable Śāriputra rose from his quiet repose and went over to Venerable Pūrṇa Maitrāyaniputra, exchanged greetings with him, and withdrew to sit at one side. He then asked Venerable Pūrṇa Maitrāyaniputra, “Good man, are you cultivating the religious practice of the ascetic Gautama?”
@@ -75,7 +76,7 @@ He replied, “So it is.”
 
 He replied, “No.”
 
-18\. “Are you cultivating the religious practice of the ascetic Gautama because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing [430c] what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?”
+18\. “Are you cultivating the religious practice of the ascetic Gautama because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?”
 {:#p18}
 
 He replied, “No.”
@@ -98,12 +99,12 @@ He replied, “No.”
 22\. Again, Śāriputra asked, “I’ve put the question to you, sir, ‘Does the ascetic Gautama declare that nirvāṇa without remainder because the precepts are purified?’ and you said, ‘No.’ … ‘Does the ascetic Gautama declare that nirvāṇa without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?’ and you said, ‘No.’ Good man, what do you mean by what you’ve said? How can I know?’”
 {:#p22}
 
-He answered, “Good man, if the Bhagavān, the ascetic Gautama, declared that nirvāṇa without remainder because the precepts are purified, then he would be saying [something with] a remainder has no remainder. If the Bhagavān, the ascetic Gautama, declared that nirvāṇa without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified, then he would be saying [something with] a remainder has no remainder.
+He answered, “Good man, if the Bhagavān, the ascetic Gautama, declared that nirvāṇa without remainder because the precepts are purified, then he would be saying something with remainder has no remainder. If the Bhagavān, the ascetic Gautama, declared that nirvāṇa without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified, then he would be saying something with remainder has no remainder.
 
-23\. “Good man, if the Bhagavān declared that nirvāṇa without remainder was to part with these things, then ordinary people would [enter] parinirvāṇa because they part with these things, too.
+23\. “Good man, if the Bhagavān declared that nirvāṇa without remainder was to part with these things, then ordinary people would parinirvāṇa when they part with these things, too.
 {:#p23}
 
-24\. “Good man, it’s simply because the precepts are purified that the mind can be purified … because the mind is purified that views can be purified … because views are purified that [431a] the hindrance of doubt can be purified … because the hindrance of doubt is purified that knowing and seeing what is and isn’t the path can be purified … because knowing and seeing what is and isn’t the path is purified that knowing and seeing the steps of the path can be purified … because knowing and seeing the steps of the path is purified that knowledge of the path’s steps to ending [suffering] can be purified … because knowledge of the path’s steps to ending [suffering] is purified that the Bhagavān, the ascetic Gautama, declares nirvāṇa without remainder.
+24\. “Good man, it’s simply because the precepts are purified that the mind can be purified … because the mind is purified that views can be purified … because views are purified that the hindrance of doubt can be purified … because the hindrance of doubt is purified that knowing and seeing what is and isn’t the path can be purified … because knowing and seeing what is and isn’t the path is purified that knowing and seeing the steps of the path can be purified … because knowing and seeing the steps of the path is purified that knowledge of the path’s steps to ending [suffering] can be purified … because knowledge of the path’s steps to ending [suffering] is purified that the Bhagavān, the ascetic Gautama, declares nirvāṇa without remainder.
 {:#p24}
 
 #### The Parable of Seven Chariots
@@ -114,25 +115,25 @@ He answered, “Good man, if the Bhagavān, the ascetic Gautama, declared that n
 26\. “Seven chariots were then placed between Śrāvastī and Śāketa. After the seven chariots were arranged, he left Śrāvastī and went to the first chariot. He rode the first chariot to the second chariot and dismounted from the first chariot. He rode the second chariot to the third chariot and dismounted from the second chariot. He rode the third chariot to the fourth chariot and dismounted from the third chariot. He rode the fourth chariot to the fifth chariot and dismounted from the fourth chariot. He rode the fifth chariot to the sixth chariot and dismounted from the fifth chariot. He rode the sixth chariot to the seventh chariot and dismounted from the sixth chariot. Riding the seventh chariot, he reached Śāketa in a single day.
 {:#p26}
 
-27\. “After his business in Śāketa, he was surrounded by great ministers while sitting in the king’s hall. That group of ministers said, ‘Did the god king travel from Śrāvastī to Śāketa in a single day?’
+27\. “After his business in Śāketa, he was surrounded by great ministers while sitting in the King’s hall. That group of ministers said, ‘Did the God King travel from Śrāvastī to Śāketa in a single day?’
 {:#p27}
 
-“The king said, ‘So it is.’
+“The King said, ‘So it is.’
 
-28\. “‘Did the god king ride the first chariot from Śrāvastī to Śāketa in a single day?’
+28\. “‘Did the God King ride the first chariot from Śrāvastī to Śāketa in a single day?’
 {:#p28}
 
-“The king said, ‘No.’
+“The King said, ‘No.’
 
 29\. “‘Did he ride the second chariot … ride the third chariot … the seventh chariot from Śrāvastī to Śāketa?’
 {:#p29}
 
-“The king said, ‘No.’
+“The King said, ‘No.’
 
-30\. “How was it, good man? Being repeatedly questioned, what did the king of Kośala Prasenajit say? The king answered that crowd of ministers, ‘I was in Śrāvastī and had some business in Śāketa. I thought, ‘What’s a way to travel from Śrāvastī to Śāketa in a single day?’ Then I thought, ‘Now, for me to go from Śrāvastī to Śāketa, I would need to place seven chariots between them.
+30\. “How was it, good man? Being repeatedly questioned, what did the king of Kośala Prasenajit say? The king answered that crowd of ministers, ‘I was in Śrāvastī and had some business in Śāketa. I thought, “What’s a way to travel from Śrāvastī to Śāketa in a single day?” Then I thought, “Now, for me to go from Śrāvastī to Śāketa, I would need to place seven chariots between them.”
 {:#p30}
 
-31\. “‘I then had seven chariots placed between Śrāvastī and Śāketa. After the seven chariots were arranged, I left Śrāvastī and went to the first chariot. I rode the first chariot to the second chariot and dismounted from the first chariot. I rode the second chariot to the third chariot and dismounted [431b] from the second chariot. I rode the third chariot to the fourth chariot and dismounted from the third chariot. I rode the fourth chariot to the fifth chariot and dismounted from the fourth chariot. I rode the fifth chariot to the sixth chariot and dismounted from the fifth chariot. I rode the sixth chariot to the seventh chariot and dismounted from the sixth chariot. Riding the seventh chariot, I reached Śāketa in a single day.’
+31\. “‘I then had seven chariots placed between Śrāvastī and Śāketa. After the seven chariots were arranged, I left Śrāvastī and went to the first chariot. I rode the first chariot to the second chariot and dismounted from the first chariot. I rode the second chariot to the third chariot and dismounted from the second chariot. I rode the third chariot to the fourth chariot and dismounted from the third chariot. I rode the fourth chariot to the fifth chariot and dismounted from the fourth chariot. I rode the fifth chariot to the sixth chariot and dismounted from the fifth chariot. I rode the sixth chariot to the seventh chariot and dismounted from the sixth chariot. Riding the seventh chariot, I reached Śāketa in a single day.’
 {:#p31}
 
 32\. “Thus, good man, did the king of Kośala Prasenajit answer that crowd of ministers’ questions. Thus, good man, it’s because the precepts are purified that the mind can be purified … because the mind is purified that views can be purified … because views are purified that the hindrance of doubt can be purified … because the hindrance of doubt is purified that knowing and seeing what is and isn’t the path can be purified … because knowing and seeing what is and isn’t the path is purified that knowing and seeing the steps of the path can be purified … because knowing and seeing the steps of the path is purified that knowledge of the path’s steps to ending [suffering] can be purified … because knowledge of the path’s steps to ending [suffering] is purified that the Bhagavān declares nirvāṇa without remainder.”
@@ -169,17 +170,20 @@ Venerable Pūrṇa Maitrāyaniputra answered, “Good man, I’m called Pūrṇa
 41\. Thus did these two good men commend each other. After praising each other’s goodness, they rejoiced and approved. They then rose from their seats and returned to their lodging.
 {:#p41}
 
+---
+
 ### Notes
 
-1. {:#n1} Direct parallels for this sutra include the [MN 24](https://suttacentral.net/mn24){: target="_blank"} and EĀ 39.10. [\[back\]](#ref1)
-2. {:#n2} *Veḷuvana monastery*. Ch. 竹林精舍. This location is unique in the Chinese Āgamas. It may well be identical to P. veḷuvana kalandakanivāpa, which occurs frequently in MĀ as a park (園). A late Song Āgama translation parallel to DĀ 8 appends monastery (精舍) to Veḷuvana Kalandaka, suggesting that at some point in history a monastery was erected there. [\[back\]](#ref2)
-3. {:#n3} *native land*. This seems to refer to the Buddha’s native land, which was that of the Śākya. Otherwise, the conversation that occurs between the monks and the Buddha makes little sense. The Pāli tradition makes the same assumption in their commentaries. Given that a large part of the Buddha’s Saṅgha was from the Śākya clan, it would also make sense to call them “native land monks.” [\[back\]](#ref3)
+1. {:#n1} Direct parallels to this sūtra include [MN 24](https://suttacentral.net/mn24){: target="_blank"} and EĀ 39.10. [\[back\]](#ref1)
+2. {:#n2} *Veḷuvana monastery*. Ch. 竹林精舍. This location is unique in the Chinese Āgamas. It may well be identical to P. veḷuvana kalandakanivāpa, which occurs frequently in MĀ translated as a park (園). A late Song Āgama parallel to DĀ 8 appends monastery (精舍) to Veḷuvana Kalandaka, suggesting that at some point in history a monastery was erected there. [\[back\]](#ref2)
+3. {:#n3} *homeland*. This seems to refer to the Buddha’s homeland, which was that of the Śākya people. Otherwise, the conversation that occurs between the monks and the Buddha makes little sense. The Pāli tradition makes the same assumption in their commentaries. Given that a large part of the Buddha’s Saṅgha was from the Śākya clan, it would also make sense to call them “homeland monks.” [\[back\]](#ref3)
+4. {:#n4} *Dark Forest*. C. 安陀林 (MC. anda forest = G. \*andhavana), P/S. Andhavana. The name of this forest near Śrāvastī was interpreted in different ways. P/S. *andha* had the basic reading of “blind,” but like English “blind” could sometimes be used to mean a dark place where a person can’t see (e.g., a blind alley). “Dark” or “gloomy” is the reading indicated for this passage in one of the Chinese glossaries (cf. T2130.54.1046c17), and I’ve translated accordingly. There is also a passage found at T1440.23.531c1 that corroborates this as the Sarvāstivāda reading of the name. There are, however, at least two other readings evident in Buddhist sources: “Blind Man’s Forest” (Theravāda) and “Regained Vision Forest” (Kāśyapīya). Both are backed by stories about robbers who were punished by having their eye’s put out.
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 June 2022
+Last Revised: 5 February 2023
 {: .revised}
 
 ---
