Added EA 3.7-10, corrections.

--- a/01_agama/ekottarika/03/EA_03_06.md
+++ b/01_agama/ekottarika/03/EA_03_06.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 3. Broader Explanations |  6. The Gods'
+title: 'The Numerical Discourses | 3. Broader Explanations | 6. The Gods'
 type: kramdown
 base: ../../../
 previous: EA_03_05.html
-next: ../12/EA_12_01.html
+next: EA_03_07.html
 ---
 
 # [The Numerical Discourses](../index.html)
