--- a/01_agama/ekottarika/03/EA_03_10.md
+++ b/01_agama/ekottarika/03/EA_03_10.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Numerical Discourses | 3. Broader Explanations | 10. Death'
 type: kramdown
 base: ../../../
-previous: EA_03_08.html
-next: EA_03_10.html
+previous: EA_03_09.html
+next: ../08/EA_08_01.html
 ---
 
 # [The Numerical Discourses](../index.html)
