Added EA 8.6-10 & 9.1-5, plus corrections.

--- a/01_agama/ekottarika/03/EA_03_10.md
+++ b/01_agama/ekottarika/03/EA_03_10.md
@@ -40,6 +40,8 @@ They replied, “Yes, Bhagavān.”
 9\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p9}
 
+###### Summary Verse
+
 * {:.verse}The Buddha, Dharma, and noble Saṅgha\\
 Up to the last recollection of death.\\
 Although they share the same name,\\
