--- a/01_agama/ekottarika/08/EA_08_05.md
+++ b/01_agama/ekottarika/08/EA_08_05.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 8. Asura | 5. The Darkness'
 type: kramdown
 base: ../../../
 previous: EA_08_04.html
-next: ../12/EA_12_01.html
+next: EA_08_06.html
 ---
 
 # [The Numerical Discourses](../index.html)
