--- a/01_agama/ekottarika/09/EA_09_05.md
+++ b/01_agama/ekottarika/09/EA_09_05.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 9. The Only Son | 5. Downfall'
 type: kramdown
 base: ../../../
 previous: EA_09_04.html
-next: ../12/EA_12_01.html
+next: EA_09_06.html
 ---
 
 # [The Numerical Discourses](../index.html)
@@ -14,23 +14,23 @@ next: ../12/EA_12_01.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “I often observe the thoughts in a person’s mind and see: ‘This person will fall to Hell[\[2\]](#n2){:#ref2} in the time it takes to flex their arm.’ Why is that? Because of their evil thoughts, their mind becomes ill, and they fall down into Hell.”
+2\. It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will fall to Hell[\[2\]](#n2){:#ref2} in the time it takes to flex their arm.’ Why is that? Because of their evil thoughts, their mind becomes ill, and they fall down into Hell.”
 {:#p2}
 
 3\. The Bhagavān then spoke in verse:
 {:#p3}
 
-* {:.verse}“Take the example of a person\\
-Who harbors hateful notions.\\
+* {:.verse}“Suppose that a person\\
+Harbors hateful notions in their heart.\\
 Now, I’ll tell you monks\\
 The meaning of this in detail.
 
-* {:.verse}Suppose their life were to end\\
-Right here and now.\\
-In that case, they would enter Hell\\
-Because of their defiled mind.
+* {:.verse}Supposing their life were to end\\
+Right at this moment in time,\\
+Then they would be sent to Hell\\
+Because of their mind’s defiled conduct.
 
-4\. “Therefore, monks, one should control their mind and not do defiled things. Thus, monks, you should train yourselves.”
+4\. “Therefore, monks, one should control their mind and not do defiled conduct. Thus, monks, you should train yourselves.”
 {:#p4}
 
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -47,7 +47,7 @@ Because of their defiled mind.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 15 February 2023
+Last Revised: 3 March 2023
 {: .revised}
 
 ---
